add reference to google drive

--- a/README.Rmd
+++ b/README.Rmd
@@ -26,3 +26,4 @@ Currently the data files are static files. However in the future I'd like to use
 fs::dir_ls("data/funs")
 ```
 
+These files were passed through `dplyr::distinct()` and posted in [DT](https://rstudio.github.io/DT/) tables in the [Examples](https://www.bryanshalloway.com/2022/01/18/identifying-r-functions-packages-used-in-github-repos/#examples) section of an accompanying blog post where links to the files on **google sheets** can also be found.
